# measurement-probe

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO  partitions.csv  sdkconfig.defaults
.devcontainer/: .dockerignore  .p10k.zsh  Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: upload-proto.yml
ci/schema-upload/: go.mod  go.sum  main.go
components/application/: CMakeLists.txt
components/application/include/application/: app.hpp  board.hpp  sensor_ids.hpp  timestamp_sensor.hpp
components/application/src/: app.cpp  board.cpp
components/driver/bme680/: CMakeLists.txt
components/driver/bme680/src/: driver.cpp
components/driver/gpio/: CMakeLists.txt
components/driver/gpio/src/: placeholder.cpp
components/driver/i2c/: CMakeLists.txt
components/driver/i2c/src/: i2c.cpp
components/sensor/bme680_sensor/: CMakeLists.txt
components/sensor/bme680_sensor/src/: bsec_wrapper.cpp  sensor.cpp
main/: CMakeLists.txt  app_config.hpp  idf_component.yml  main.cpp  measurements.hpp  probe_app.hpp
proto/: measurement.options  measurement.proto
tools/provision/: README.md  go.mod
tools/provision/cmd/provision/: main.go
tools/provision/internal/api/: client.go  client_test.go
tools/provision/internal/endpoints/: endpoints.go  endpoints_test.go
tools/provision/internal/gcloud/: gcloud.go
tools/provision/internal/nvs/: writer.go  writer_test.go
tools/provision/internal/partition/: parser.go  parser_test.go
tools/provision/internal/serial/: mac.go  mac_test.go
tools/setup/: README.md  go.mod
tools/setup/cmd/setup/: main.go
tools/setup/internal/bsec/: bsec.go  bsec_test.go
tools/setup/internal/git/: submodules.go  submodules_test.go
tools/setup/internal/project/: project.go  (+1 more)
(+13 files in other folders)
